Bug fix + bigger window - Made the window larger as a temporary solution to other receipts clipping over each other. - Fixed bug where clicking the refresh button returns more than 10 records in the first page.

--- a/billiards_app/src/renderer/src/assets/main.css
+++ b/billiards_app/src/renderer/src/assets/main.css
@@ -53,6 +53,7 @@ a{
   border-width: 2px; 
   border-color: orange;
   margin-bottom: 10px;
+  overflow: scroll;
 }
 .search-bar{
   margin-top: 10px;
